fix: header is visible at the beginning of the page

--- a/src/assets/components/form/form.scss
+++ b/src/assets/components/form/form.scss
@@ -7,6 +7,7 @@
     width: 100%;
     text-align: center;
     border: none;
+    border-radius: 10px;
     padding: 17px 0;
     margin-bottom: 17px;
     background: $light-bg;
