--- a/src/assets/sections/questions/questions.scss
+++ b/src/assets/sections/questions/questions.scss
@@ -20,7 +20,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 560px;
     width: 100%;
     min-height: 70px;
     padding: 15px;
